// Vitest Snapshot v1

exports[`PasswordResetRequest > matches snapshot in en 1`] = `
<div
  class="page auth password-reset-request"
>
  <h1>
    Reset your password 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
      placeholder="john.doe.at.example.com"
    >
      <label
        for="email"
      >
        Your email
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Email me
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;

exports[`PasswordResetRequest > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset-request"
>
  <h1>
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
      placeholder="john.doe@example.com"
    >
      <label
        for="email"
      >
        Votre adresse courriel
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Réinitialiser
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;
